# Arxiu

./: .editorconfig  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  INSTALL_QUICK.md  LICENSE  Makefile  README.md  SECURITY.md  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  security.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20250507_0001_users_and_audit.py  20250507_0002_catalog_and_people.py  20250507_0003_grading.py  20250507_0004_enviaments.py  20250507_0005_imports.py  20260520_0006_junta_policies.py  20260521_0007_app_settings.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: __init__.py  acta.py  admin_users.py  app_settings.py  archive.py  audit.py  auth.py  butlletins.py  catalog.py  dashboard.py  deps.py  enviaments.py  exports.py  grading.py  imports.py  people.py  stats.py  trash.py
apps/backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  observability.py  permissions.py  rate_limit.py  security.py
apps/backend/app/db/: base.py  redis.py  session.py
apps/backend/app/models/: __init__.py  app_settings.py  audit_log.py  catalog.py  enviaments.py  grading.py  imports.py  people.py  user.py
apps/backend/app/schemas/: auth.py  catalog.py  grading.py  imports.py  outputs.py  people.py  user.py
apps/backend/app/scripts/: seed.py  seed_admin.py
apps/backend/app/services/: acta.py  audit.py  auth.py  avaluacio_state.py  butlleti.py  catalog.py  email.py  exports.py  imports.py  people.py  qualificacions.py  settings.py  stats.py  users.py
apps/backend/app/tasks/: worker.py
apps/backend/app/templates/email/: butlleti.html
apps/backend/app/templates/pdf/: acta.html  butlleti.html
apps/backend/tests/: conftest.py  factories.py  fakes.py
apps/backend/tests/integration/: test_admin_users.py  test_archive.py  test_auth.py  test_catalog.py  test_curs_mismatch.py  test_dashboard.py  test_exports.py  test_grading.py  test_health.py  test_imports.py  test_outputs.py  test_trash.py
apps/backend/tests/unit/: test_permission_matrix.py  test_permissions.py  test_security.py  test_state_machine.py
apps/frontend/: .prettierrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/frontend/e2e/: auth.spec.ts  critical-flows.spec.ts
apps/frontend/src/: App.test.tsx  App.tsx  main.tsx
apps/frontend/src/api/: acta.ts  admin.ts  appSettings.ts  archive.ts  auth.ts  catalog.ts  client.test.ts  client.ts  dashboard.ts  exports.test.ts  exports.ts  grading.ts  grups.ts  imports.ts  outputs.ts  people.ts  stats.ts  trash.ts
apps/frontend/src/components/layout/: AppShell.module.css  AppShell.tsx  Sidebar.tsx  Topbar.tsx
apps/frontend/src/components/ui/: Button.module.css  Button.tsx  ConfirmDialog.tsx  Icon.tsx  Modal.module.css  Modal.tsx  Placeholder.tsx  Toast.module.css  Toast.tsx
apps/frontend/src/features/admin/: AdminPage.module.css  AdminPage.tsx  AssignacionsTab.tsx  CursosTab.tsx  EmailTab.tsx  FamiliesTab.tsx  GrupsTab.tsx  MatriculesTab.tsx
apps/frontend/src/features/alumnes/: AlumneFormModal.module.css  AlumneFormModal.tsx  AlumnesPage.module.css  AlumnesPage.tsx
apps/frontend/src/features/archive/: AlumneExpedientPage.tsx  (+3 more)
apps/frontend/src/hooks/: useExport.ts
apps/frontend/src/stores/: authStore.ts  cursAcadStore.ts  toastStore.ts  uiStore.ts
apps/frontend/src/styles/: globals.css  tokens.css
docs/: data-model.html  data-model.mmd  diagrames.html  evaluacions-state.mmd  rols-i-permisos.md  user-creation-flow.mmd
docs/screenshots/: .gitkeep
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
infra/nginx/: nginx.conf  security-headers.conf
infra/windows-server/: ADMIN_GUIDE.md  README.md  backup.ps1  bootstrap.ps1  install.ps1  restore.ps1
scripts/: backup.sh  pre_publish_check.sh  smoke.sh
(+35 files in other folders)
